--- a/sa0301-ha.ini
+++ b/sa0301-ha.ini
@@ -37,9 +37,9 @@
 #03    initial: 28
 #03    min_temp: 16
 #03    max_temp: 30
-#0F    preset_mode_command_topic: $(name)/set/Service018F
+#0F    preset_mode_command_topic: $(name)/set/Service018B
 #0F    preset_mode_command_template: "{{ '0' if value == 'auto' else value }}"
-#0F    preset_mode_state_topic: $(name)/Service010F
+#0F    preset_mode_state_topic: $(name)/Service010B
 #0F    preset_mode_value_template: "{{ 'auto' if value == '0' else value }}"
 #0F    preset_modes:
 &01      - 'auto'
@@ -50,9 +50,9 @@
 &20      - '5'
 &40      - '6'
 &80      - '7'
-#11    swing_mode_command_topic: $(name)/set/Service0191
+#11    swing_mode_command_topic: $(name)/set/Service018C
 #11    swing_mode_command_template: "{{ '0' if value == 'auto' else value }}"
-#11    swing_mode_state_topic: $(name)/Service0111
+#11    swing_mode_state_topic: $(name)/Service010C
 #11    swing_mode_state_template: "{{ 'auto' if value == '0' else value }}"
 #11    swing_modes:
 &01      - 'auto'
@@ -63,48 +63,3 @@
 &20      - '5'
 &40      - '6'
 &80      - '7'
-===
-===sensor:
-#14  - platform: mqtt
-#14    name: $(name)_HUMIDITY
-#14    state_topic: $(name)/Service0114
-#14    unit_of_measurement: '%'
-#14    value_template: '{{ value }}'
-#21  - platform: mqtt
-#21    name: $(name)_OUTDOOR
-#21    state_topic: $(name)/Service0121
-#21    value_template: '{{ value }}'
-#21    unit_of_measurement: '℃'
-#21    device_class: temperature
-#27  - platform: mqtt
-#27    name: $(name)_POWER
-#27    state_topic: $(name)/Service0127
-#27    unit_of_measurement: 'W'
-#27    value_template: '{{ value }}'
-#28  - platform: mqtt
-#28    name: $(name)_POWERMETER
-#28    state_topic: $(name)/Service0128
-#28    value_template: '{{ "%.2f" | format(float(value) * 0.1) }}'
-#28    unit_of_measurement: 'kWh'
-#28    device_class: energy
-#28    state_class: total_increasing
-===
-===switch:
-#0E  - platform: mqtt
-#0E    unique_id: $(name)_Flap
-#0E    name: $(name)_Flap
-#0E    command_topic: $(name)/set/Service018E
-#0E    payload_on: '1'
-#0E    payload_off: '0'
-#0E    state_topic: $(name)/Service010E
-#0E    state_on: '1'
-#0E    state_off: '0'
-#10  - platform: mqtt
-#10    unique_id: $(name)_Swing
-#10    name: $(name)_Swing
-#10    command_topic: $(name)/set/Service0190
-#10    payload_on: '1'
-#10    payload_off: '0'
-#10    state_topic: $(name)/Service0110
-#10    state_on: '1'
-#10    state_off: '0'
