--- a/sa0301-ha.ini
+++ b/sa0301-ha.ini
@@ -1,65 +1,65 @@
-===climate:
-===  - platform: mqtt
-===    unique_id: $(name)
-===    name: $(name)
-#00    power_command_topic: $(name)/set/Service0180
-#00    payload_off: '0'
-#00    payload_on: '1'
-#01    mode_command_topic: $(name)/set/Service0181
-#01    mode_command_template: >
-#01      {% set values = { 'cool':'0', 'dry':'1', 'fan_only':'2', 'auto':'3', 'heat':'4'} %}
-#01      {{ values[value] if value in values.keys() else 'off' }}
-#01    mode_state_topic: $(name)/Service0101
-#01    mode_state_template: >
-#01      {% set values = { '0':'cool', '1':'dry', '2':'fan_only', '3':'auto', '4':'heat'} %}
-#01      {{ values[value] if value in values.keys() else 'off' }}
-#01    modes:
-#01      - 'off'
-&01      - 'cool'
-&02      - 'dry'
-&04      - 'fan_only'
-&08      - 'auto'
-&10      - 'heat'
-#02    fan_mode_command_topic: $(name)/set/Service0182
-#02    fan_mode_state_topic: $(name)/Service0102
-#02    fan_modes:
-&01      - 'auto'
-&02      - '1'
-&04      - '2'
-&08      - '3'
-&10      - '4'
-&20      - '5'
-&40      - '6'
-&80      - '7'
-#03    temperature_command_topic: $(name)/set/Service0183
-#03    temperature_state_topic: $(name)/Service0103
-#03    current_temperature_topic: $(name)/Service0104
-#03    initial: 28
-#03    min_temp: 16
-#03    max_temp: 30
-#0F    preset_mode_command_topic: $(name)/set/Service018B
-#0F    preset_mode_command_template: "{{ '0' if value == 'auto' else value }}"
-#0F    preset_mode_state_topic: $(name)/Service010B
-#0F    preset_mode_value_template: "{{ 'auto' if value == '0' else value }}"
-#0F    preset_modes:
-&01      - 'auto'
-&02      - '1'
-&04      - '2'
-&08      - '3'
-&10      - '4'
-&20      - '5'
-&40      - '6'
-&80      - '7'
-#11    swing_mode_command_topic: $(name)/set/Service018C
-#11    swing_mode_command_template: "{{ '0' if value == 'auto' else value }}"
-#11    swing_mode_state_topic: $(name)/Service010C
-#11    swing_mode_state_template: "{{ 'auto' if value == '0' else value }}"
-#11    swing_modes:
-&01      - 'auto'
-&02      - '1'
-&04      - '2'
-&08      - '3'
-&10      - '4'
-&20      - '5'
-&40      - '6'
-&80      - '7'
+===mqtt:
+===  climate:
+===    - unique_id: $(name)
+===      name: $(name)
+#00      power_command_topic: $(name)/set/Service0180
+#00      payload_off: '0'
+#00      payload_on: '1'
+#01      mode_command_topic: $(name)/set/Service0181
+#01      mode_command_template: >
+#01        {% set values = { 'cool':'0', 'dry':'1', 'fan_only':'2', 'auto':'3', 'heat':'4'} %}
+#01        {{ values[value] if value in values.keys() else 'off' }}
+#01      mode_state_topic: $(name)/Service0101
+#01      mode_state_template: >
+#01        {% set values = { '0':'cool', '1':'dry', '2':'fan_only', '3':'auto', '4':'heat'} %}
+#01        {{ values[value] if value in values.keys() else 'off' }}
+#01      modes:
+#01        - 'off'
+&01        - 'cool'
+&02        - 'dry'
+&04        - 'fan_only'
+&08        - 'auto'
+&10        - 'heat'
+#02      fan_mode_command_topic: $(name)/set/Service0182
+#02      fan_mode_state_topic: $(name)/Service0102
+#02      fan_modes:
+&01        - 'auto'
+&02        - '1'
+&04        - '2'
+&08        - '3'
+&10        - '4'
+&20        - '5'
+&40        - '6'
+&80        - '7'
+#03      temperature_command_topic: $(name)/set/Service0183
+#03      temperature_state_topic: $(name)/Service0103
+#03      current_temperature_topic: $(name)/Service0104
+#03      initial: 28
+#03      min_temp: 16
+#03      max_temp: 30
+#0F      preset_mode_command_topic: $(name)/set/Service018B
+#0F      preset_mode_command_template: "{{ '0' if value == 'auto' else value }}"
+#0F      preset_mode_state_topic: $(name)/Service010B
+#0F      preset_mode_value_template: "{{ 'auto' if value == '0' else value }}"
+#0F      preset_modes:
+&01        - 'auto'
+&02        - '1'
+&04        - '2'
+&08        - '3'
+&10        - '4'
+&20        - '5'
+&40        - '6'
+&80        - '7'
+#11      swing_mode_command_topic: $(name)/set/Service018C
+#11      swing_mode_command_template: "{{ '0' if value == 'auto' else value }}"
+#11      swing_mode_state_topic: $(name)/Service010C
+#11      swing_mode_state_template: "{{ 'auto' if value == '0' else value }}"
+#11      swing_modes:
+&01        - 'auto'
+&02        - '1'
+&04        - '2'
+&08        - '3'
+&10        - '4'
+&20        - '5'
+&40        - '6'
+&80        - '7'
