--- a/sa0401-ha.ini
+++ b/sa0401-ha.ini
@@ -1,110 +1,110 @@
-===climate:
-===  - platform: mqtt
-===    unique_id: $(name)
-===    name: $(name)
-#00    power_command_topic: $(name)/set/Service0180
-#00    payload_off: '0'
-#00    payload_on: '1'
-#01    mode_command_topic: $(name)/set/Service0181
-#01    mode_command_template: >
-#01      {% set values = { 'cool':'0', 'dry':'1', 'fan_only':'2', 'auto':'3', 'heat':'4'} %}
-#01      {{ values[value] if value in values.keys() else 'off' }}
-#01    mode_state_topic: $(name)/Service0101
-#01    mode_state_template: >
-#01      {% set values = { '0':'cool', '1':'dry', '2':'fan_only', '3':'auto', '4':'heat'} %}
-#01      {{ values[value] if value in values.keys() else 'off' }}
-#01    modes:
-#01      - 'off'
-&01      - 'cool'
-&02      - 'dry'
-&04      - 'fan_only'
-&08      - 'auto'
-&10      - 'heat'
-#02    fan_mode_command_topic: $(name)/set/Service0182
-#02    fan_mode_state_topic: $(name)/Service0102
-#02    fan_modes:
-&01      - 'auto'
-&02      - '1'
-&04      - '2'
-&08      - '3'
-&10      - '4'
-&20      - '5'
-&40      - '6'
-&80      - '7'
-#03    temperature_command_topic: $(name)/set/Service0183
-#03    temperature_state_topic: $(name)/Service0103
-#03    current_temperature_topic: $(name)/Service0104
-#03    initial: 28
-#03    min_temp: 16
-#03    max_temp: 30
-#0F    preset_mode_command_topic: $(name)/set/Service018F
-#0F    preset_mode_command_template: "{{ '0' if value == 'auto' else value }}"
-#0F    preset_mode_state_topic: $(name)/Service010F
-#0F    preset_mode_value_template: "{{ 'auto' if value == '0' else value }}"
-#0F    preset_modes:
-&01      - 'auto'
-&02      - '1'
-&04      - '2'
-&08      - '3'
-&10      - '4'
-&20      - '5'
-&40      - '6'
-&80      - '7'
-#11    swing_mode_command_topic: $(name)/set/Service0191
-#11    swing_mode_command_template: "{{ '0' if value == 'auto' else value }}"
-#11    swing_mode_state_topic: $(name)/Service0111
-#11    swing_mode_state_template: "{{ 'auto' if value == '0' else value }}"
-#11    swing_modes:
-&01      - 'auto'
-&02      - '1'
-&04      - '2'
-&08      - '3'
-&10      - '4'
-&20      - '5'
-&40      - '6'
-&80      - '7'
+===mqtt:
+===  climate:
+===    - unique_id: $(name)
+===      name: $(name)
+#00      power_command_topic: $(name)/set/Service0180
+#00      payload_off: '0'
+#00      payload_on: '1'
+#01      mode_command_topic: $(name)/set/Service0181
+#01      mode_command_template: >
+#01        {% set values = { 'cool':'0', 'dry':'1', 'fan_only':'2', 'auto':'3', 'heat':'4'} %}
+#01        {{ values[value] if value in values.keys() else 'off' }}
+#01      mode_state_topic: $(name)/Service0101
+#01      mode_state_template: >
+#01        {% set values = { '0':'cool', '1':'dry', '2':'fan_only', '3':'auto', '4':'heat'} %}
+#01        {{ values[value] if value in values.keys() else 'off' }}
+#01      modes:
+#01        - 'off'
+&01        - 'cool'
+&02        - 'dry'
+&04        - 'fan_only'
+&08        - 'auto'
+&10        - 'heat'
+#02      fan_mode_command_topic: $(name)/set/Service0182
+#02      fan_mode_state_topic: $(name)/Service0102
+#02      fan_modes:
+&01        - 'auto'
+&02        - '1'
+&04        - '2'
+&08        - '3'
+&10        - '4'
+&20        - '5'
+&40        - '6'
+&80        - '7'
+#03      temperature_command_topic: $(name)/set/Service0183
+#03      temperature_state_topic: $(name)/Service0103
+#03      current_temperature_topic: $(name)/Service0104
+#03      initial: 28
+#03      min_temp: 16
+#03      max_temp: 30
+#0F      preset_mode_command_topic: $(name)/set/Service018F
+#0F      preset_mode_command_template: "{{ '0' if value == 'auto' else value }}"
+#0F      preset_mode_state_topic: $(name)/Service010F
+#0F      preset_mode_value_template: "{{ 'auto' if value == '0' else value }}"
+#0F      preset_modes:
+&01        - 'auto'
+&02        - '1'
+&04        - '2'
+&08        - '3'
+&10        - '4'
+&20        - '5'
+&40        - '6'
+&80        - '7'
+#11      swing_mode_command_topic: $(name)/set/Service0191
+#11      swing_mode_command_template: "{{ '0' if value == 'auto' else value }}"
+#11      swing_mode_state_topic: $(name)/Service0111
+#11      swing_mode_state_template: "{{ 'auto' if value == '0' else value }}"
+#11      swing_modes:
+&01        - 'auto'
+&02        - '1'
+&04        - '2'
+&08        - '3'
+&10        - '4'
+&20        - '5'
+&40        - '6'
+&80        - '7'
 ===
-===sensor:
-#14  - platform: mqtt
-#14    name: $(name)_HUMIDITY
-#14    state_topic: $(name)/Service0114
-#14    unit_of_measurement: '%'
-#14    value_template: '{{ value }}'
-#21  - platform: mqtt
-#21    name: $(name)_OUTDOOR
-#21    state_topic: $(name)/Service0121
-#21    value_template: '{{ value }}'
-#21    unit_of_measurement: '℃'
-#21    device_class: temperature
-#27  - platform: mqtt
-#27    name: $(name)_POWER
-#27    state_topic: $(name)/Service0127
-#27    unit_of_measurement: 'W'
-#27    value_template: '{{ value }}'
-#28  - platform: mqtt
-#28    name: $(name)_POWERMETER
-#28    state_topic: $(name)/Service0128
-#28    value_template: '{{ "%.2f" | format(float(value) * 0.1) }}'
-#28    unit_of_measurement: 'kWh'
-#28    device_class: energy
-#28    state_class: total_increasing
+===  sensor:
+#14    - unique_id: $(name)_Humidity
+#14      name: $(name)_Humidity
+#14      state_topic: $(name)/Service0114
+#14      unit_of_measurement: '%'
+#14      value_template: '{{ value }}'
+#14      device_class: humidity
+#21    - unique_id: $(name)_OutdoorTemperature
+#21      name: $(name)_OutdoorTemperature
+#21      state_topic: $(name)/Service0121
+#21      unit_of_measurement: '℃'
+#21      value_template: '{{ value }}'
+#21      device_class: temperature
+#27    - unique_id: $(name)_Power
+#27      name: $(name)_Power
+#27      state_topic: $(name)/Service0127
+#27      unit_of_measurement: 'W'
+#27      value_template: '{{ value }}'
+#27      device_class: power
+#28    - unique_id: $(name)_PowerMeter
+#28      name: $(name)_PowerMeter
+#28      state_topic: $(name)/Service0128
+#28      unit_of_measurement: 'kWh'
+#28      value_template: '{{ "%.2f" | format(float(value) * 0.1) }}'
+#28      device_class: energy
+#28      state_class: total_increasing
 ===
-===switch:
-#0E  - platform: mqtt
-#0E    unique_id: $(name)_Flap
-#0E    name: $(name)_Flap
-#0E    command_topic: $(name)/set/Service018E
-#0E    payload_on: '1'
-#0E    payload_off: '0'
-#0E    state_topic: $(name)/Service010E
-#0E    state_on: '1'
-#0E    state_off: '0'
-#10  - platform: mqtt
-#10    unique_id: $(name)_Swing
-#10    name: $(name)_Swing
-#10    command_topic: $(name)/set/Service0190
-#10    payload_on: '1'
-#10    payload_off: '0'
-#10    state_topic: $(name)/Service0110
-#10    state_on: '1'
-#10    state_off: '0'
+===  switch:
+#0E    - unique_id: $(name)_Flap
+#0E      name: $(name)_Flap
+#0E      command_topic: $(name)/set/Service018E
+#0E      payload_on: '1'
+#0E      payload_off: '0'
+#0E      state_topic: $(name)/Service010E
+#0E      state_on: '1'
+#0E      state_off: '0'
+#10    - unique_id: $(name)_Swing
+#10      name: $(name)_Swing
+#10      command_topic: $(name)/set/Service0190
+#10      payload_on: '1'
+#10      payload_off: '0'
+#10      state_topic: $(name)/Service0110
+#10      state_on: '1'
+#10      state_off: '0'
