--- a/sa0404-ha.ini
+++ b/sa0404-ha.ini
@@ -1,28 +1,28 @@
-===humidifier:
-===  - platform: mqtt
-===    device_class: dehumidifier
-===    unique_id: $(name)
-===    name: $(name)
-#00    command_topic: $(name)/set/Service0480
-#00    state_topic: $(name)/Service0400
-#00    payload_off: '0'
-#00    payload_on: '1'
-#01    mode_command_topic: $(name)/set/Service0481
-#01    mode_command_template: >
-#01      {% set values = { 'auto':'0', 'normal':'1', 'continuous':'2', 'boost':'3', 'home':'4', 'baby':'5', 'away':'6', 'comfort':'7'} %}
-#01      {{ values[value] if value in values.keys() else 'home' }}
-#01    mode_state_topic: $(name)/Service0401
-#01    mode_state_template: >
-#01      {% set values = { '0':'auto', '1':'normal', '2':'continuous', '3':'boost', '4':'home', '5':'baby', '6':'away', '7':'comfort'} %}
-#01      {{ values[value] if value in values.keys() else 'home' }}
-#01    modes:
-&01      - 'auto'
-&02      - 'normal'
-&04      - 'continuous'
-&08      - 'boost'
-&10      - 'home'
-&20      - 'baby'
-&40      - 'away'
-&80      - 'comfort'
-#07    target_humidity_command_topic: $(name)/set/Service0487
-#07    target_humidity_state_topic: $(name)/Service0407
+===mqtt:
+===  humidifier:
+===    - device_class: dehumidifier
+===      unique_id: $(name)
+===      name: $(name)
+#00      command_topic: $(name)/set/Service0480
+#00      state_topic: $(name)/Service0400
+#00      payload_off: '0'
+#00      payload_on: '1'
+#01      mode_command_topic: $(name)/set/Service0481
+#01      mode_command_template: >
+#01        {% set values = { 'auto':'0', 'normal':'1', 'continuous':'2', 'boost':'3', 'home':'4', 'baby':'5', 'away':'6', 'comfort':'7'} %}
+#01        {{ values[value] if value in values.keys() else 'home' }}
+#01      mode_state_topic: $(name)/Service0401
+#01      mode_state_template: >
+#01        {% set values = { '0':'auto', '1':'normal', '2':'continuous', '3':'boost', '4':'home', '5':'baby', '6':'away', '7':'comfort'} %}
+#01        {{ values[value] if value in values.keys() else 'home' }}
+#01      modes:
+&01        - 'auto'
+&02        - 'normal'
+&04        - 'continuous'
+&08        - 'boost'
+&10        - 'home'
+&20        - 'baby'
+&40        - 'away'
+&80        - 'comfort'
+#07      target_humidity_command_topic: $(name)/set/Service0487
+#07      target_humidity_state_topic: $(name)/Service0407
