--- a/sa0301-ha.ini
+++ b/sa0301-ha.ini
@@ -21,7 +21,9 @@
 &08        - 'auto'
 &10        - 'heat'
 #02      fan_mode_command_topic: $(name)/set/Service0182
+#02      fan_mode_command_template: "{{ '0' if value == 'auto' else value }}"
 #02      fan_mode_state_topic: $(name)/Service0102
+#02      fan_mode_state_template: "{{ 'auto' if value == '0' else value }}"
 #02      fan_modes:
 &01        - 'auto'
 &02        - '1'
