--- a/sa0401-ha.ini
+++ b/sa0401-ha.ini
@@ -21,7 +21,9 @@
 &08        - 'auto'
 &10        - 'heat'
 #02      fan_mode_command_topic: $(name)/set/Service0182
+#02      fan_mode_command_template: "{{ '0' if value == 'auto' else value }}"
 #02      fan_mode_state_topic: $(name)/Service0102
+#02      fan_mode_state_template: "{{ 'auto' if value == '0' else value }}"
 #02      fan_modes:
 &01        - 'auto'
 &02        - '1'
@@ -65,31 +67,31 @@
 &80        - '7'
 ===
 ===  sensor:
-#14    - unique_id: $(name)_Humidity
+#14    - device_class: humidity
+#14      unique_id: $(name)_Humidity
 #14      name: $(name)_Humidity
 #14      state_topic: $(name)/Service0114
 #14      unit_of_measurement: '%'
 #14      value_template: '{{ value }}'
-#14      device_class: humidity
-#21    - unique_id: $(name)_OutdoorTemperature
+#21    - device_class: temperature
+#21      unique_id: $(name)_OutdoorTemperature
 #21      name: $(name)_OutdoorTemperature
 #21      state_topic: $(name)/Service0121
 #21      unit_of_measurement: '℃'
 #21      value_template: '{{ value }}'
-#21      device_class: temperature
-#27    - unique_id: $(name)_Power
+#27    - device_class: power
+#27      unique_id: $(name)_Power
 #27      name: $(name)_Power
 #27      state_topic: $(name)/Service0127
 #27      unit_of_measurement: 'W'
 #27      value_template: '{{ value }}'
-#27      device_class: power
-#28    - unique_id: $(name)_PowerMeter
+#28    - device_class: energy
+#28      state_class: total_increasing
+#28      unique_id: $(name)_PowerMeter
 #28      name: $(name)_PowerMeter
 #28      state_topic: $(name)/Service0128
 #28      unit_of_measurement: 'kWh'
 #28      value_template: '{{ "%.2f" | format(float(value) * 0.1) }}'
-#28      device_class: energy
-#28      state_class: total_increasing
 ===
 ===  switch:
 #0E    - unique_id: $(name)_Flap
