--- a/sa0301-ha.ini
+++ b/sa0301-ha.ini
@@ -21,9 +21,9 @@
 &08        - 'auto'
 &10        - 'heat'
 #02      fan_mode_command_topic: $(name)/set/Service0182
-#02      fan_mode_command_template: "{{ '0' if value == 'auto' else value }}"
+&01      fan_mode_command_template: "{{ '0' if value == 'auto' else value }}"
 #02      fan_mode_state_topic: $(name)/Service0102
-#02      fan_mode_state_template: "{{ 'auto' if value == '0' else value }}"
+&01      fan_mode_state_template: "{{ 'auto' if value == '0' else value }}"
 #02      fan_modes:
 &01        - 'auto'
 &02        - '1'
@@ -40,9 +40,9 @@
 #03      min_temp: 16
 #03      max_temp: 30
 #0F      preset_mode_command_topic: $(name)/set/Service018B
-#0F      preset_mode_command_template: "{{ '0' if value == 'auto' else value }}"
+&01      preset_mode_command_template: "{{ '0' if value == 'auto' else value }}"
 #0F      preset_mode_state_topic: $(name)/Service010B
-#0F      preset_mode_value_template: "{{ 'auto' if value == '0' else value }}"
+&01      preset_mode_value_template: "{{ 'auto' if value == '0' else value }}"
 #0F      preset_modes:
 &01        - 'auto'
 &02        - '1'
@@ -53,9 +53,9 @@
 &40        - '6'
 &80        - '7'
 #11      swing_mode_command_topic: $(name)/set/Service018C
-#11      swing_mode_command_template: "{{ '0' if value == 'auto' else value }}"
+&01      swing_mode_command_template: "{{ '0' if value == 'auto' else value }}"
 #11      swing_mode_state_topic: $(name)/Service010C
-#11      swing_mode_state_template: "{{ 'auto' if value == '0' else value }}"
+&01      swing_mode_state_template: "{{ 'auto' if value == '0' else value }}"
 #11      swing_modes:
 &01        - 'auto'
 &02        - '1'
