--- a/sa0307-ha.ini
+++ b/sa0307-ha.ini
@@ -2,11 +2,26 @@
 ===  fan:
 ===    - unique_id: $(name)
 ===      name: $(name)
-#00      state_topic: $(name)/Service0700
 #00      command_topic: $(name)/set/Service0780
+#00      state_topic: $(name)/Service0700
 #00      payload_off: '0'
 #00      payload_on: '1'
-#02      percentage_state_topic: $(name)/Service0702
+#01      preset_mode_command_topic: $(name)/set/Service0781
+#01      preset_mode_state_topic: $(name)/Service0701
+#01      preset_modes:
+&01        - '0'
+&02        - '1'
+&04        - '2'
+&08        - '3'
+&10        - '4'
+&20        - '5'
+&40        - '6'
+&80        - '7'
 #02      percentage_command_topic: $(name)/set/Service0782
+#02      percentage_state_topic: $(name)/Service0702
 #02      speed_range_min: 1
 #02      speed_range_max: 7
+#03      oscillation_command_topic: $(name)/set/Service0783
+#03      oscillation_state_topic: $(name)/Service0703
+#03      payload_oscillation_off: '0'
+#03      payload_oscillation_on: '1'
