--- a/sa0404-ha.ini
+++ b/sa0404-ha.ini
@@ -26,3 +26,5 @@
 &80        - 'comfort'
 #07      target_humidity_command_topic: $(name)/set/Service0487
 #07      target_humidity_state_topic: $(name)/Service0407
+#07      min_humidity: 30
+#07      max_humidity: 80
