--- a/sa0307-ha.ini
+++ b/sa0307-ha.ini
@@ -25,3 +25,11 @@
 #03      oscillation_state_topic: $(name)/Service0703
 #03      payload_oscillation_off: '0'
 #03      payload_oscillation_on: '1'
+===
+===  sensor:
+#09    - device_class: temperature
+#09      unique_id: $(name)_Temperature
+#09      name: $(name)_Temperature
+#09      state_topic: $(name)/Service0709
+#09      unit_of_measurement: '℃'
+#09      value_template: '{{ value }}'
