--- a/update.ini
+++ b/update.ini
@@ -1,4 +1,4 @@
-4.02
+4.03
 sa0300.ini
 sa0301.ini
 sa0301-ha.ini
@@ -14,6 +14,7 @@ sa0404-ha.ini
 sa0404-hitachi.ini
 daikin.svg
 hitachi.svg
+homekit.svg
 mitsubishi-heavy.svg
 panasonic.svg
 teco.svg
