--- a/sa0301-ha.ini
+++ b/sa0301-ha.ini
@@ -8,7 +8,7 @@
 #01      mode_command_topic: $(name)/set/Service0181
 #01      mode_command_template: >
 #01        {% set values = { 'cool':'0', 'dry':'1', 'fan_only':'2', 'auto':'3', 'heat':'4'} %}
-#01        {{ values[value] if value in values.keys() else 'off' }}
+#01        {{ values[value] if value in values.keys() else '3' }}
 #01      mode_state_topic: $(name)/Service0101
 #01      mode_state_template: >
 #01        {% set values = { '0':'cool', '1':'dry', '2':'fan_only', '3':'auto', '4':'heat'} %}
