--- a/sa0404-ha.ini
+++ b/sa0404-ha.ini
@@ -10,7 +10,7 @@
 #01      mode_command_topic: $(name)/set/Service0481
 #01      mode_command_template: >
 #01        {% set values = { 'auto':'0', 'normal':'1', 'continuous':'2', 'boost':'3', 'home':'4', 'baby':'5', 'away':'6', 'comfort':'7'} %}
-#01        {{ values[value] if value in values.keys() else 'home' }}
+#01        {{ values[value] if value in values.keys() else '4' }}
 #01      mode_state_topic: $(name)/Service0401
 #01      mode_state_template: >
 #01        {% set values = { '0':'auto', '1':'normal', '2':'continuous', '3':'boost', '4':'home', '5':'baby', '6':'away', '7':'comfort'} %}
