--- a/sa0301-ha.ini
+++ b/sa0301-ha.ini
@@ -2,16 +2,13 @@
 ===  climate:
 ===    - unique_id: $(name)
 ===      name: $(name)
-#00      power_command_topic: $(name)/set/Service0180
-#00      payload_off: '0'
-#00      payload_on: '1'
 #01      mode_command_topic: $(name)/set/Service0181
 #01      mode_command_template: >
-#01        {% set values = { 'cool':'0', 'dry':'1', 'fan_only':'2', 'auto':'3', 'heat':'4'} %}
-#01        {{ values[value] if value in values.keys() else '3' }}
+#01        {% set values = { 'off':'C', 'cool':'O0', 'dry':'O1', 'fan_only':'O2', 'auto':'O3', 'heat':'O4' } %}
+#01        {{ values[value] if value in values.keys() else 'O3' }}
 #01      mode_state_topic: $(name)/Service0101
 #01      mode_state_template: >
-#01        {% set values = { '0':'cool', '1':'dry', '2':'fan_only', '3':'auto', '4':'heat'} %}
+#01        {% set values = { '0':'cool', '1':'dry', '2':'fan_only', '3':'auto', '4':'heat' } %}
 #01        {{ values[value] if value in values.keys() else 'off' }}
 #01      modes:
 #01        - 'off'
