--- a/update.ini
+++ b/update.ini
@@ -1,20 +1,20 @@
-4.14
-sa0300.ini
-sa0301.ini
-sa0301-ha.ini
-sa0307.ini
-sa0307-ha.ini
-sa0400.ini
-sa0401.ini
-sa0401-ha.ini
-sa0401-hitachi.ini
-sa0401-panasonic.ini
-sa0404.ini
-sa0404-ha.ini
-sa0404-hitachi.ini
-daikin.svg
-hitachi.svg
-homekit.svg
-mitsubishi-heavy.svg
-panasonic.svg
-teco.svg
+4.15
+sa0300.ini,56
+sa0301.ini,688
+sa0301-ha.ini,2243
+sa0307.ini,230
+sa0307-ha.ini,1084
+sa0400.ini,160
+sa0401-ha.ini,3730
+sa0401-hitachi.ini,2336
+sa0401-panasonic.ini,2334
+sa0401.ini,2274
+sa0404-ha.ini,1196
+sa0404-hitachi.ini,1720
+sa0404.ini,1520
+daikin.svg,1000
+hitachi.svg,1382
+homekit.svg,3163
+mitsubishi-heavy.svg,3756
+panasonic.svg,4117
+teco.svg,2453
