--- a/update.ini
+++ b/update.ini
@@ -1,4 +1,4 @@
-4.24
+4.25
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
@@ -9,6 +9,7 @@ sa0401-ha.ini,3730
 sa0401-hitachi.ini,2336
 sa0401-panasonic.ini,2334
 sa0401.ini,2274
+sa0403.ini,1714
 sa0404-ha.ini,1196
 sa0404-hitachi.ini,1720
 sa0404.ini,1520
@@ -17,4 +18,5 @@ hitachi.svg,1382
 homekit.svg,3163
 mitsubishi-heavy.svg,3756
 panasonic.svg,4117
+sakura.svg,1517
 teco.svg,2453
