--- a/update.ini
+++ b/update.ini
@@ -1,18 +1,20 @@
-4.27
+4.28
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
 sa0307.ini,230
 sa0307-ha.ini,1084
 sa0400.ini,160
+sa0400-electric.ini,54
 sa0401-ha.ini,3730
 sa0401-hitachi.ini,2336
 sa0401-panasonic.ini,2334
 sa0401.ini,2274
 sa0403.ini,1714
+sa0403-ha.ini,518
+sa0404.ini,1520
 sa0404-ha.ini,1196
 sa0404-hitachi.ini,1720
-sa0404.ini,1520
 daikin.svg,1000
 hitachi.svg,1382
 homekit.svg,3163
