--- a/update.ini
+++ b/update.ini
@@ -1,4 +1,4 @@
-4.32
+4.33
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
@@ -11,10 +11,12 @@ sa0401-hitachi.ini,2336
 sa0401-panasonic.ini,2334
 sa0401.ini,2274
 sa0403.ini,1714
-sa0403-ha.ini,518
+sa0403-ha.ini,517
 sa0404.ini,1520
 sa0404-ha.ini,1196
 sa0404-hitachi.ini,1720
+sa0410.ini,1262
+sa0410-ha.ini,497
 daikin.svg,1000
 hitachi.svg,1382
 homekit.svg,3163
