--- a/update.ini
+++ b/update.ini
@@ -1,4 +1,4 @@
-4.36
+4.37
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
@@ -18,9 +18,10 @@ sa0404-hitachi.ini,1720
 sa0410.ini,1262
 sa0410-ha.ini,497
 daikin.svg,1000
+goodwe.svg,1975
 hitachi.svg,1382
-homekit.svg,3163
+homekit.svg,3156
 mitsubishi-heavy.svg,3756
 panasonic.svg,4117
-sakura.svg,1517
+sakura.svg,1511
 teco.svg,2453
