--- a/update.ini
+++ b/update.ini
@@ -1,4 +1,4 @@
-4.37
+4.38
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
@@ -15,8 +15,9 @@ sa0403-ha.ini,517
 sa0404.ini,1520
 sa0404-ha.ini,1196
 sa0404-hitachi.ini,1720
-sa0410.ini,1262
+sa0410.ini,1260
 sa0410-ha.ini,497
+sa04e0.ini,2340
 daikin.svg,1000
 goodwe.svg,1975
 hitachi.svg,1382
