--- a/update.ini
+++ b/update.ini
@@ -1,4 +1,4 @@
-4.42
+4.43
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
@@ -17,7 +17,8 @@ sa0404-ha.ini,1196
 sa0404-hitachi.ini,1720
 sa0410.ini,1260
 sa0410-ha.ini,497
-sa04e0.ini,2344
+sa04e0.ini,2956
+sa04e0-goodwe.ini,2998
 sa04e0-ha.ini,550
 daikin.svg,1000
 goodwe.svg,1975
