--- a/update.ini
+++ b/update.ini
@@ -1,4 +1,4 @@
-4.44
+4.45
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
@@ -23,6 +23,7 @@ sa04e0-ha.ini,550
 daikin.svg,1000
 goodwe.svg,1975
 hitachi.svg,1382
+hmk.svg,1576
 homekit.svg,3156
 mitsubishi-heavy.svg,3756
 panasonic.svg,4117
