--- a/update.ini
+++ b/update.ini
@@ -1,10 +1,10 @@
-4.45
+4.46
 sa0300.ini,56
 sa0301.ini,688
 sa0301-ha.ini,2243
 sa0307.ini,230
 sa0307-ha.ini,1084
-sa0400.ini,582
+sa0400.ini,678
 sa0400-electric.ini,54
 sa0401.ini,2262
 sa0401-ha.ini,3730
@@ -17,13 +17,15 @@ sa0404-ha.ini,1196
 sa0404-hitachi.ini,1720
 sa0410.ini,1260
 sa0410-ha.ini,497
+sa0415.ini,286
+sa0415-ha.ini,497
 sa04e0.ini,2956
 sa04e0-goodwe.ini,2998
 sa04e0-ha.ini,550
 daikin.svg,1000
 goodwe.svg,1975
 hitachi.svg,1382
-hmk.svg,1576
+hmk.svg,1570
 homekit.svg,3156
 mitsubishi-heavy.svg,3756
 panasonic.svg,4117
